add some resume part

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<li><a href="#" class="btn btn-default">HOME</a></li>
 				<li><a href="#" class="btn btn-default">PORTFOLIO</a></li>
 				<li><a href="#" class="btn btn-default">ABOUT</a></li>
-				<li><a href="#" class="btn btn-default">RESUME</a></li>
+				<li><a href="#/resume" class="btn btn-default">RESUME</a></li>
 				<li><a href="#" class="btn btn-default">CONTACT</a></li>
 			</ul>
 		</div>
@@ -32,6 +32,8 @@
 		<script src="js/app.js"></script>
 
 		<!-- Controllers -->
+		<script src="js/controllers/MainController.js"></script>
+		<script src="js/controllers/ResumeController.js"></script>
 
 	</body>
 </html>
