finish resume part

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 	</head>
 
 	<body ng-app="personalApp">
-		<div class="menu pull-right">
-			<ul>
-				<li><a href="#" class="btn btn-default">HOME</a></li>
-				<li><a href="#" class="btn btn-default">PORTFOLIO</a></li>
-				<li><a href="#" class="btn btn-default">ABOUT</a></li>
-				<li><a href="#/resume" class="btn btn-default">RESUME</a></li>
-				<li><a href="#" class="btn btn-default">CONTACT</a></li>
-			</ul>
+		<div class="header">
+			<div class="menu pull-right">
+				<ul>
+					<li><a href="#" class="btn btn-default">HOME</a></li>
+					<li><a href="#" class="btn btn-default">PORTFOLIO</a></li>
+					<li><a href="#" class="btn btn-default">ABOUT</a></li>
+					<li><a href="#/resume" class="btn btn-default">RESUME</a></li>
+					<li><a href="#" class="btn btn-default">CONTACT</a></li>
+				</ul>
+			</div>
 		</div>
-
 		<div class="main">
 			<div ng-view></div>
 		</div>
