--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                         		<li><a href="http://map.makinoalany.com">NearMe App</a></li>
                         		<li><a href="http://schedule.makinoalany.com">Schedule App</a></li>
                         		<li><a href="http://reader.makinoalany.com">Reader App</a></li>
+                        		<li><a href="http://game.makinoalany.com">WebGL Game</a></li>
                     		</ul>
                 	</li>
 					<li><a href="#" class="btn btn-default">ABOUT</a></li>
