add linkedin badage

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
 		<!-- Controllers -->
 		<script src="js/controllers/MainController.js"></script>
+		<script src="js/controllers/ResumeController.js"></script>
 
 		<!-- Directives -->
 		<script src="js/vendor/leaflet.js"></script>
